# gemini-live-agent-hackathon

./: .gitignore  README.md  skills-lock.json
.claude/memory/: feedback_no_fallbacks.md
agent/: .dockerignore  .env.local  Dockerfile  agent.py  hidden_gems.py  pyproject.toml
roam/: app.json  eslint.config.js  jest.config.js  metro.config.js  package-lock.json  package.json
roam/.firecrawl/: gemini-image.md  gemini-live-audio.md  gemini-live-sdk.md  gemini-models.md  gemini-text-gen.md
roam/app/: _layout.tsx  index.tsx  onboarding.tsx  profile.tsx
roam/app/tour/: assistant.tsx  camera.tsx  completion.tsx  guide.tsx  history.tsx  map.tsx  overview.tsx  story.tsx
roam/assets/models/: arjun.glb  luna.glb  maya.glb  rex-v1.glb
roam/components/: AudioPlayer.tsx  CameraView.tsx  FloatingOrb.tsx  GuideMic.tsx  HiddenGemBadge.tsx  HighlightedNarration.tsx  MapView.tsx  ModelViewer.tsx  StopCard.tsx
roam/components/assistant/: AgentVisualization.tsx  ChatBar.tsx  ChatLog.tsx  ControlBar.tsx
roam/constants/: colors.ts  config.ts
roam/hooks/: useCameraVerification.ts  useConnection.tsx  useGeminiChat.ts  useGeminiLive.ts  useHiddenGems.ts  useLocation.ts  useNarrationPlayback.ts  useTour.ts
roam/services/: api.ts  geminiService.ts  tourService.ts
roam/store/: hiddenGemStore.ts  tourStore.ts  userStore.ts
roam/tests/: components.test.ts  hooks.test.ts
roam/types/: expo-asset.d.ts  hiddenGem.ts  stop.ts  tour.ts
roam/utils/: audio.ts  distance.ts  wordSync.ts
server/: .env  package-lock.json  package.json
server/src/: agent.ts  index.ts
